[package]
name = "ray_tracer"
version = "0.1.0"
authors = ["HoNile <nicolas_cohen@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vec3"
path = "src/vec3.rs"

[[bin]]
name = "ray_tracer"
path = "src/main.rs"

[dependencies]
rayon = "1.1"
